--- a/deploy/vote/deployment.yaml
+++ b/deploy/vote/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: vote
     spec:
       containers:
-      - image: schoolofdevops/vote:v1
+      - image: schoolofdevops/vote:qwerty
         name: vote
         resources: {}
 
