--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -4,3 +4,11 @@ resources:
 - ../base
 patchesStrategicMerge:
 - deployment.yaml
+- service.yaml
+namespace: instavote
+images:
+- name: schoolofdevops/vote
+newTag: v4
+replicas:
+- name: vote
+count: 4
