--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
-patchesStrategicMerge:
-- deployment.yaml
-- service.yaml
 namespace: instavote
 images:
 - name: schoolofdevops/vote
-newTag: v4
+  newTag: v4
 replicas:
-- name: vote
-count: 4
+- count: 4
+  name: vote
+patches:
+- path: deployment.yaml
+- path: service.yaml
