--- a/deploy/vote/dev/kustomization.yaml
+++ b/deploy/vote/dev/kustomization.yaml
@@ -2,5 +2,23 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
-patchesStrategicMerge:
-- deployment.yaml
+namespace: instavote
+images:
+- name: schoolofdevops/vote
+  newTag: v4
+replicas:
+- count: 8
+  name: vote
+patches:
+- path: deployment.yaml
+- path: service.yaml
+commonLabels: 
+  project: instavote
+  env: dev
+
+commonAnnotations:
+  supported-by: "sre@example.com"
+
+configMapGenerator:
+  - name: vote-options
+    env: options.env
